Fix delete confirmation modal's backdrop not visible

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -110,10 +110,10 @@ form {
 dialog {
   border: 0;
 }
-dialog::backdrop {
+/* dialog::backdrop {
   background-color: var(--neutral-900);
   opacity: 0.5;
-}
+} */
 button:hover {
   cursor: pointer;
 }
